@@ -1,3 +1,11 @@
+2014-05-01  Joern Rennecke <joern.rennecke@embecosm.com>
+
+	* include/stdint.h (INT8_C): Also define for __cplusplus >= 201103L.
+	If __INT8_C is defined, use GNU C preprocessor builtin-macro
+	for the definition.
+	(INT16_C INT32_C, INT64_C, UINT8_C, UINT16_C, UINT32_C): Likewise.
+	(UINT64_C, INTMAX_C, UINTMAX_C): Likewise.
+
 2014-04-29  Aurelien Jarno  <aurelien@aurel32.net>
 
 	* include/util/setbaud.h: correct typo.
